# AEGIS-SIGHT

./: .dockerignore  .env.development  .env.example  .env.staging  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  state.json
aegis-sight-api/: .dockerignore  .env.example  API_GUIDE.md  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
aegis-sight-api/alembic/: env.py
aegis-sight-api/alembic/versions/: 001_initial_schema.py  002_add_log_software_tables.py  003_add_audit_log.py  004_add_alerts.py  005_add_departments.py  006_add_config_network.py  007_add_scheduler_tasks.py  008_add_indexes_partitions.py  009_add_notification_channels.py  010_add_tags.py  011_add_device_groups_views.py  012_add_lifecycle_disposal.py  013_add_patches_vulnerabilities.py  014_add_ip_management.py  015_add_policies.py  016_add_change_tracking.py  017_add_dlp.py  018_add_user_sessions.py  019_add_print_management.py  020_add_remote_work.py  021_add_incidents.py  022_add_sla.py  023_add_knowledge_base.py  024_add_software_sku_aliases.py
aegis-sight-api/app/: main.py  version.py
aegis-sight-api/app/core/: api_metrics.py  background.py  compression.py  config.py  database.py  deps.py  etag.py  exceptions.py  ip_restriction.py  logging_config.py  messages.py  middleware.py  pagination.py  rate_limit.py  security.py  security_headers.py  session_manager.py  validators.py
aegis-sight-api/app/models/: __init__.py  alert.py  asset_lifecycle.py  audit_log.py  change_tracking.py  custom_view.py  department.py  device.py  device_group.py  dlp.py  hardware_snapshot.py  incident.py  ip_management.py  knowledge_base.py  license.py  log_event.py  network_device.py  notification_channel.py  patch.py  policy.py  print_management.py  procurement.py  sla.py  (+8 more)
aegis-sight-api/scripts/: backup_db.sh  export_openapi.py  restore_db.sh  seed_data.py
aegis-sight-api/tests/: conftest.py  factories.py  test_alerts.py  test_api_metrics.py  test_assets.py  test_audit.py  test_auth.py  test_batch.py  test_cache.py  test_change_detector.py  test_changes.py  test_compliance.py  test_config.py  test_custom_views.py  test_dashboard.py  test_database_api.py  test_departments.py  test_device_groups.py  test_dlp.py  test_encryption.py  test_etag.py  test_export.py  test_graph_service.py  test_health.py  test_health_detail.py  test_import_validator.py  test_incidents.py  test_integration.py  test_ip_management.py  test_knowledge.py  test_lifecycle.py  test_logs.py  test_m365.py  test_messages.py  test_middleware.py  test_network.py  test_notifications.py  test_patches.py  test_policies.py  test_printing.py  (+23 more)
(+575 files in other folders)
